# automaton-evaluator

./: Cargo.toml  README.md
src/: config.rs  dfa.rs  fa.rs  lib.rs  main.rs  nfa.rs  traits.rs
test_configs/: dfa01.json  dfa02.json  nfa01.json  nfa02.json  nfa03.json
