[package]
name = "automaton-evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"], optional = true }
serde = { version = "1.0.163", features = ["derive"], optional = true }
serde_json = { version = "1.0.96", optional = true }

[features]
build-binary = ["clap", "serde", "serde_json"]

[[bin]]
name = "automaton-evaluator"
path = "src/main.rs"

[lib]
name = "automaton_evaluator"
path = "src/lib.rs"